--- a/octofit-tracker/frontend/public/index.html
+++ b/octofit-tracker/frontend/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -28,7 +29,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <img src="/octofitapp-small.png" alt="OctoFit Logo" style="position: absolute; top: 10px; left: 10px; width: 50px; height: auto;" />
     <div id="root"></div>
     <!--
       This HTML file is a template.
