--- a/octofit-tracker/frontend/public/index.html
+++ b/octofit-tracker/frontend/public/index.html
@@ -29,6 +29,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <img src="/octofitapp-small.png" alt="OctoFit Logo" style="position: absolute; top: 10px; left: 10px; width: 50px; height: auto;" />
     <div id="root"></div>
     <!--
       This HTML file is a template.
